--- a/documentation/IPTC-NinJS-Guidelines.adoc
+++ b/documentation/IPTC-NinJS-Guidelines.adoc
@@ -12,7 +12,7 @@ keywords: iptc, news, story, article, media, json, javascript, markup, schema, m
 :email: office@iptc.org
 :version-label: Covers version
 :revnumber: 3.0, 2.1 and 1.5
-:revremark: Revised 2024-11-07
+:revremark: Revised 2024-11-26
 :toc: left
 :toc-title: ninjs User Guide
 :toclevels: 2
@@ -57,8 +57,7 @@ In creating ninjs, we focused on two main use cases:
 most important properties - such as byline, headline, and body text - as
 determined by a given provider.
 * ninjs allows the provider to indicate whether there are more properties
-available, if the recipient would like to request more, using the
-`representationtype: "partial"` construct.
+available using the `representationtype: "partial"` construct.
 * Version 3.x of ninjs has been created to work well with both GraphQL and
 OpenAPI/Swagger, the two main standards for JSON-based APIs.
 * Versions 2.x and 3.x of the ninjs schema have been created in such a way
@@ -79,17 +78,19 @@ http://www.elasticsearch.org/[Elasticsearch].
 
 === The ninjs data model in a nutshell
 
-As the below diagram shows, every ninjs object describes a *News Item*. All
+As the below diagram shows, every ninjs object describes an *Item* - either a
+*News Item*, *Planning Item* or *Event*. All
 ninjs items must have a unique ID given by a *URI*. They can have administrative
-metadata, describing who created the news item and when, descriptive metadata
-describing *people*, *places*, *genres*, *subjects*, *organisations* and
-*events* related to the news item.
+metadata (describing who created the news item and when), descriptive metadata
+(describing *people*, *places*, *genres*, *subjects*, *organisations* and
+*events* related to the item) and rights-based metadata (*copyright*, *licensing*
+and *usage terms*).
 
-The content itself can be a *body*, containing text, HTML or other
+The content of the item can be a *body*, containing text, HTML or other
 representation of the text of a news item, *renditions* of the news item as
 images, videos or multimedia, or both body and renditions.
 
-*Associations* are a means of linking news items together.
+*Associations* are a means of linking ninjs items together.
 
 image:ninjsScope-w800.jpg[ninjs Data Model diagram]
 
@@ -98,9 +99,9 @@ image:ninjsScope-w800.jpg[ninjs Data Model diagram]
 image:ninjsillustration.jpg[ninjs Object Building Blocks diagram]
 
 === A simple example
+
 ninjs can be very simple. This is an example of something that might be returned
 by an API call.
-
 
 [tabs]
 ====
@@ -127,7 +128,8 @@ include::includes/examples/1.5/001_simple_example.json[]
 
 ====
 
-You can make your own simple ninjs document using the
+You can make your own ninjs documents for demonstration or testing purposes
+using the
 https://www.iptc.org/std/ninjs/generator/[ninjs generator tool on iptc.org].
 
 === Versions of ninjs: ninjs 3.0, 2.1 and 1.5
@@ -371,7 +373,13 @@ Business address:
 
 Here we document each property that can be used in a ninjs object.
 
-The "uri" property is *required* at the top level. In some array objects, other properties may be required.
+The "uri" property is *required* at the top level. In some array objects, other
+properties may be required; for example, if `rightsInfo` is used, then either
+`linkedRights` or `encodedRights` is required.
+
+These tables primarily describe the ninjs 3.0 schema. Where possible, we note
+differences in the 1.x and 2.x schemas, but the ultimate reference for each
+version of ninjs is the relevant JSON Schema file.
 
 === Administrative properties
 
@@ -405,7 +413,9 @@ property
 `composite` +
 `component` +
 `event` +
-`planning`
+(3.0 only) +
+`planning` +
+(3.0 only)
 
 [[title]]
 |`title`
@@ -433,7 +443,7 @@ This property is an object with the following child properties:
 !string
 
 !`schema`
-!The uri of the JSON schema to use for validation, such as `https://www.iptc.org/std/ninjs/ninjs-schema_2.1.json`
+!The uri of the JSON schema to use for validation, such as `https://www.iptc.org/std/ninjs/ninjs-schema_3.0.json`
 !URI
 
 !===
@@ -446,7 +456,7 @@ This property is an object with the following child properties:
 `altid` (1.x)
 a|Alternative identifiers for the item. It is up to the individual provider to
 name and set type on the alternative identifiers they like to use. +
-This property is an object with the following child properties: +
+In ninjs 2.x and 3.x, this property is an object with the following child properties: +
 
 [cols="3"]
 !===
@@ -462,15 +472,16 @@ This property is an object with the following child properties: +
 
 !===
 
-|array of objects
+|array of objects (2.x, 3.x) +
+JSON object (1.x)
 
 [[representationType]]
 |`representationType`
 |`representationtype`
-|Indicates the completeness of this representation of a news item. +
+a|Indicates the completeness of this representation of a news item. +
 For a full document representation, the value should be `full`. +
 For a partial representation, for example a short extract provided as the results of an API call, the value `partial` should be used. +
-NOTE: in ninjs 1.x, the allowed values are "complete" and "incomplete".
+NOTE: in ninjs 1.x, the allowed values are `complete` and `incomplete`.
 |
 One of: +
 `full` +
@@ -1386,7 +1397,7 @@ a|The approximate date (and optionally time) at which the event or coverage is e
 |<<Truncated DateTime>>
 
 |`expectedDuration`
-a|The time period that the event or coverage is expected to last. (Actual duration can be calculated from startDate and endDate)
+a|The time period that the event or coverage is expected to last. Must use the https://www.rfc-editor.org/rfc/rfc5545#section-3.3.6[iCalendar duration format (RFC 5545)]. (Actual duration can be calculated from startDate and endDate)
 |string
 
 |`recurrence`
@@ -1919,14 +1930,17 @@ https://github.com/iptc/newsinjson[IPTC newsinjson github repository].
 === Online "ninjs generator" tool
 
 The IPTC has created a simple form-based tool that can be used to generate
-sample ninjs documents. It supports both ninjs 1.5 and ninjs 2.1.
+sample ninjs documents. It supports ninjs versions 1.5, 2.1 and 3.0, so it
+is also a handy way to see the differences between each schema version.
 
 The tool can be accessed at https://iptc.org/std/ninjs/generator/.
 
 === TypeScript type definition
 
 Ian Young of PA Media Group has created a 
-https://www.npmjs.com/package/@pa-media-group/iptc-ninjs-2-type[TypeScript type for ninjs 2] that can be used to ease development with ninjs in TypeScript.
+https://www.npmjs.com/package/@pa-media-group/iptc-ninjs-2-type[TypeScript type for ninjs 2]
+that can be used to ease development with ninjs in TypeScript. We plan to
+release a type for ninjs 3.0 soon.
 
 == Mapping between ninjs and NewsML-G2
 
